Fix: Remove white space above Food Trucks sidebar title

--- a/truckfinder/static/css/styles.css
+++ b/truckfinder/static/css/styles.css
@@ -62,6 +62,8 @@ body::before {
 }
 
 nav {
+  position: fixed;
+  top: 0;
   width: 100%;
   padding: 1.25rem 5%;
   background: rgba(255, 255, 255, 0.05);
@@ -959,7 +961,7 @@ html {
 /* Sidebar panel */
 /* Author: Chat GPT "How to make a Pop-out Sidebar" 4/8/2026 */
 #sidePanel {
-  padding-top: 35px;
+  padding-top: 0px;
   position: fixed;
   top: 80px;
   left: 0;
